--- a/src/lab9p2_equipo9/Main.form
+++ b/src/lab9p2_equipo9/Main.form
@@ -122,6 +122,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Eliminar Registro"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_eliminarregistroMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -186,6 +189,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Orders"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_listaordersMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bt_listadetails">
               <Properties>
@@ -197,6 +203,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Details"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_listadetailsMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton1">
               <Properties>
@@ -208,6 +217,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Customers"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bt_listarproducts">
               <Properties>
@@ -219,6 +231,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Products"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_listarproductsMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
               <Properties>
