--- a/src/lab9p2_equipo9/Main.form
+++ b/src/lab9p2_equipo9/Main.form
@@ -95,7 +95,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
+                <Component class="javax.swing.JTable" name="tabla">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="8" rowCount="0">
@@ -117,6 +117,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Update Tabla"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_updatetablaMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bt_eliminarregistro">
               <Properties>
