--- a/src/lab9p2_equipo9/Main.form
+++ b/src/lab9p2_equipo9/Main.form
@@ -731,6 +731,11 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JProgressBar" name="pb_barra">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="ff" red="99" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
